--- a/xgds_video/templates/xgds_video/video_still_viewer.html
+++ b/xgds_video/templates/xgds_video/video_still_viewer.html
@@ -40,7 +40,7 @@
 	{% endif %}
 	<div class="row">
 	<div class="three columns">
-	<a class="mybutton " href="{% url 'xgds_video_downloadStill' flightName timeKey 1 %}" >Download Image</a>
+	<a class="btn btn-primary " href="{% url 'xgds_video_downloadStill' flightName timeKey 1 %}" >Download Image</a>
 	 </div>
 	 <div class="nine columns">
 	{% if position %}
