--- a/xgds_video/templates/xgds_video/VideoJS.html
+++ b/xgds_video/templates/xgds_video/VideoJS.html
@@ -1,10 +1,7 @@
-	<!-- <script type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.min.js"></script> -->
-	<!-- <script type="text/javascript" src="{{ EXTERNAL_URL }}underscore/underscore-min.js"></script>
      <script type="text/javascript" src="{{ EXTERNAL_URL }}packery/dist/packery.pkgd.min.js" ></script> -->
     <script type="text/javascript" src="{{ EXTERNAL_URL }}klass/klass.min.js"></script>
     <script type="text/javascript" src="{{ EXTERNAL_URL }}jwplayer/jwplayer.js"></script>
- 	<!-- <script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/packem.js"></script> -->
- 	<script type="text/javascript" src="{{ EXTERNAL_URL }}jquery-form/jquery.form.js" ></script>
+ 	<!--  <script type="text/javascript" src="{{ EXTERNAL_URL }}jquery-form/jquery.form.js" ></script> -->
     <script type="text/javascript">
         jwplayer.key="{{ settings.JWPLAYER_KEY }}";
         STATIC_URL='{{ STATIC_URL }}';
