--- a/xgds_video/templates/xgds_video/map_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/map_recorded_playbacks.html
@@ -52,10 +52,10 @@
     		<div id="controllers" > 
     			<br/>
     			<div class="controller_div">
-	          	<a class="btn btn-info" id="playbuttonLink" href="#" onclick="xgds_video.playButtonCallback()">
+	          	<a class="btn btn-primary btn btn-primary-info" id="playbuttonLink" href="#" onclick="xgds_video.playButtonCallback()">
 	              <i id="playbutton" class="icon-play"></i>
 	              </a>
-	            <a class="btn btn-info" id="pausebuttonLink" href="#" onclick="xgds_video.pauseButtonCallback()">
+	            <a class="btn btn-primary btn btn-primary-info" id="pausebuttonLink" href="#" onclick="xgds_video.pauseButtonCallback()">
 	              <i id="pausebutton" class="icon-pause active"></i>
 	              </a>
 	             </div>
@@ -80,7 +80,7 @@
 	   		<div id="seekTimeBox" >
 				<label for="seekTime">Jump to:</label>
 	   			<input  id="seekTime" type="text" name="text-input" placeholder="HH:MM:SS" class="stylish"/>
-	   			<button type="submit" class="mybutton small" id="seekButton" onclick='xgds_video.seekCallBack()'> Go </button>
+	   			<button type="submit" class="btn btn-primary small" id="seekButton" onclick='xgds_video.seekCallBack()'> Go </button>
 	   		</div>
 	   		{% endblock jumpto %}
    		</div>
@@ -113,11 +113,11 @@
         
 	            <div class="buttons">
 	                 <div class="toprow-left"><b>{{ source.name }}</b></div>
-	                 <a class="mybutton toprow-right small" href="{% url 'xgds_video_recorded' flightName source.shortName %}" target="{% if sources|length > 1 %}{{flightName}}_{{source.shortName}}{% else %}_blank{% endif %}" style="width:130px">New Window</a>
-                     <!-- <a class="mybutton toprow-right small" href="#" onClick="showStillViewer('{{flightName}}', '{{source.shortName}}', getUrlFormatPlayerTime('{{source.shortName}}'));">Still</a> -->
+	                 <a class="btn btn-primary toprow-right small" href="{% url 'xgds_video_recorded' flightName source.shortName %}" target="{% if sources|length > 1 %}{{flightName}}_{{source.shortName}}{% else %}_blank{% endif %}" style="width:130px">New Window</a>
+                     <!-- <a class="btn btn-primary toprow-right small" href="#" onClick="showStillViewer('{{flightName}}', '{{source.shortName}}', getUrlFormatPlayerTime('{{source.shortName}}'));">Still</a> -->
                      {% with feed=source.feed_set.all.0.shortName %}
 	                 {% if feed %}
-	                     <a class="mybutton" id=toprow href="{% url 'xgds_video_live' feed %}">Live</a>
+	                     <a class="btn btn-primary" id=toprow href="{% url 'xgds_video_live' feed %}">Live</a>
 	                 {% endif %}
 	                 {% endwith %}
 	            </div>
