--- a/xgds_video/templates/xgds_video/map_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/map_recorded_playbacks.html
@@ -53,10 +53,10 @@
     			<br/>
     			<div class="controller_div">
 	          	<a class="btn btn-primary btn btn-primary-info" id="playbuttonLink" href="#" onclick="xgds_video.playButtonCallback()">
-	              <i id="playbutton" class="icon-play"></i>
+	              <i id="playbutton" class="fa fa-play fa-lg"></i>
 	              </a>
 	            <a class="btn btn-primary btn btn-primary-info" id="pausebuttonLink" href="#" onclick="xgds_video.pauseButtonCallback()">
-	              <i id="pausebutton" class="icon-pause active"></i>
+	              <i id="pausebutton" class="fa fa-pause fa-lg active"></i>
 	              </a>
 	             </div>
 	          </div>
@@ -108,8 +108,8 @@
 			data-gs-x="{% if forloop.counter|modulo:2 == 0 %}3{% else %}0{% endif %}" data-gs-y="0"
         	data-gs-width="{% if sources|length > 1 %}3{% else %}6{% endif %}" data-gs-height="{% if sources|length > 1 %}2{% else %}4{% endif %}" >
         	<div class="grid-stack-item-content video-div" id="item{{forloop.counter}}" style="background-color:{{ source.displayColor }};">
-                <i class="icon-lock pinDiv warning"></i>
-				<i class="icon-cancel-circled"></i>
+                <i class="fa fa-lock pinDiv warning"></i>
+				<i class="fa fa-window-close fa-lg"></i>
         
 	            <div class="buttons">
 	                 <div class="toprow-left"><b>{{ source.name }}</b></div>
@@ -150,8 +150,8 @@
 		data-gs-x="4" data-gs-y="12"
         data-gs-width="3" data-gs-height="2" hidden="true">
         <div class="grid-stack-item-content" id="search-gridstack-item-content" >
-	        <i class="icon-lock pinDiv warning"></i>
-	    	<i class="icon-cancel-circled"></i>
+	        <i class="fa fa-lock pinDiv warning"></i>
+	    	<i class="fa fa-window-close fa-lg"></i>
 			<div id="searchDiv" hidden="true"></div>
 		</div>
 </div>
@@ -162,9 +162,9 @@
 		data-gs-x="0" data-gs-y="4"
         data-gs-width="3" data-gs-height="3" >
         <div class="grid-stack-item-content" id="search-results-gridstack-item-content" >
-        <i class="icon-lock pinDiv warning"></i>
-		<i class="icon-cancel-circled"></i>
-		<i class="icon-arrows-ccw right" title="Reload Latest" id="reloadSearchResults"></i>
+        <i class="fa fa-lock pinDiv warning"></i>
+		<i class="fa fa-window-close fa-lg"></i>
+		<i class="fa fa-refresh right" title="Reload Latest" id="reloadSearchResults"></i>
 			<div id="searchResultsDiv"></div>
 		</div>
 </div>
