--- a/xgds_video/attic/templates/image_stream_subnav.html
+++ b/xgds_video/attic/templates/image_stream_subnav.html
@@ -1,13 +1,11 @@
 {% block sitemenu-content-secondary %}
 {% load nav %}
 <form id="streamForm">
-<div class="sitemenu-nav-secondary">
 	<nav class="subnav">
-	<ul>
-		<li {% currentnav live_image_stream %}><a href="{% url 'live_image_stream' %}">Live</a></li>
-		<li {% currentnav xgds_video_list %}><a href="{% url 'xgds_video_list' %}">Archived</a></li>
+	<ul class="nav nav-pills">
+		<li class='nav-item  {% currentnav live_image_stream %}'><a  class='nav-link  {% currentnav live_image_stream %}' href="{% url 'live_image_stream' %}">Live</a></li>
+		<li class='nav-item  {% currentnav xgds_video_list %}'><a class='nav-link  {% currentnav xgds_video_list %}' href="{% url 'xgds_video_list' %}">Archived</a></li>
   	</ul>
   	</nav>
-</div>
 </form>
 {% endblock %}
