--- a/xgds_video/templates/xgds_video/map_live_playbacks.html
+++ b/xgds_video/templates/xgds_video/map_live_playbacks.html
@@ -31,9 +31,11 @@
 		data-gs-x="{{ forloop.counter0|multiply:3 }}" data-gs-y="0"
         data-gs-width="{% if zipped|length > 1 %}3{% else %}6{%endif %}" data-gs-height="2" >
         <div class="grid-stack-item-content" id="view-gridstack-item-content-{{source.name}}" style="background-color:{{ source.displayColor }};">
-        	<i class="fa fa-lock pinDiv warning"></i>
-        	<i class="fa fa-window-close fa-lg"></i>
-			<i class="fa fa-refresh right" title="Refresh Video Player" id="{{source.shortName}}_refreshVideoPlayer"></i>
+        	<ul class="nav justify-content-end">
+				<i class="fa fa-refresh mr-2" title="Refresh Video Player" id="{{source.shortName}}_refreshVideoPlayer"></i>
+        		<i class="fa fa-lock pinDiv mr-2"></i>
+        		<i class="fa fa-window-close fa-lg"></i>
+			</ul>
 	            <div class="buttons">
 	                 <div class="toprow-left"><b>{{ source.name }}</b>{% if zipped|length == 1 %}
              		<span class="hint">Doubleclick on the video to make it full screen.</span>
