updating gridstack so tiny icons do not take up a row

--- a/xgds_video/templates/xgds_video/map_live_playbacks.html
+++ b/xgds_video/templates/xgds_video/map_live_playbacks.html
@@ -36,7 +36,7 @@
         		<i class="fa fa-lock pinDiv mr-2"></i>
         		<i class="fa fa-window-close fa-lg"></i>
 			</ul>
-	            <div class="buttons">
+	            <div class="buttons mt-negative-1rem">
 	                 <div class="toprow-left"><b>{{ source.name }}</b>{% if zipped|length == 1 %}
              		<span class="hint">Doubleclick on the video to make it full screen.</span>
              		{% endif %}</div>
