removed classes from thead

--- a/xgds_video/attic/templates/SearchImageStreams.html
+++ b/xgds_video/attic/templates/SearchImageStreams.html
@@ -29,7 +29,7 @@
 
 {% block contents %}
 <table id="image_streams_table">
-<thead class="table_header">
+<thead>
 	<tr>
 		<th class="image_streams_table_headers">Date</th>
 	</tr>
