--- a/xgds_video/templates/xgds_video/map_live_playbacks.html
+++ b/xgds_video/templates/xgds_video/map_live_playbacks.html
@@ -33,8 +33,8 @@
         <div class="grid-stack-item-content" id="view-gridstack-item-content-{{source.name}}" style="background-color:{{ source.displayColor }};">
         	<ul class="nav justify-content-end">
 				<i class="fa fa-refresh mr-2" title="Refresh Video Player" id="{{source.shortName}}_refreshVideoPlayer"></i>
-        		<i class="fa fa-lock pinDiv mr-2"></i>
-        		<i class="fa fa-window-close fa-lg"></i>
+        		<i class="fa fa-lock pinDiv gray-light mr-2"></i>
+        		<i class="fa fa-window-close gray-light fa-lg"></i>
 			</ul>
 	            <div class="buttons mt-negative-1rem">
 	                 <div class="toprow-left"><b>{{ source.name }}</b>{% if zipped|length == 1 %}
