--- a/xgds_video/templates/xgds_video/map_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/map_recorded_playbacks.html
@@ -108,8 +108,8 @@
 			data-gs-x="{% if forloop.counter|modulo:2 == 0 %}3{% else %}0{% endif %}" data-gs-y="0"
         	data-gs-width="{% if sources|length > 1 %}3{% else %}6{% endif %}" data-gs-height="{% if sources|length > 1 %}2{% else %}4{% endif %}" >
         	<div class="grid-stack-item-content video-div" id="item{{forloop.counter}}" style="background-color:{{ source.displayColor }};">
-                <i class="fa fa-lock pinDiv warning"></i>
-				<i class="fa fa-window-close fa-lg"></i>
+                <i class="fa fa-lock pinDiv gray-light"></i>
+				<i class="fa fa-window-close gray-light fa-lg"></i>
         
 	            <div class="buttons mt-negative-1rem">
 	                 <div class="toprow-left"><b>{{ source.name }}</b></div>
@@ -150,8 +150,8 @@
 		data-gs-x="4" data-gs-y="12"
         data-gs-width="3" data-gs-height="2" hidden="true">
         <div class="grid-stack-item-content" id="search-gridstack-item-content" >
-	        <i class="fa fa-lock pinDiv warning"></i>
-	    	<i class="fa fa-window-close fa-lg"></i>
+	        <i class="fa fa-lock pinDiv gray-light"></i>
+	    	<i class="fa fa-window-close gray-light fa-lg"></i>
 			<div id="searchDiv mt-negative-1rem" hidden="true"></div>
 		</div>
 </div>
@@ -162,8 +162,8 @@
 		data-gs-x="0" data-gs-y="4"
         data-gs-width="3" data-gs-height="3" >
         <div class="grid-stack-item-content" id="search-results-gridstack-item-content" >
-        <i class="fa fa-lock pinDiv warning"></i>
-		<i class="fa fa-window-close fa-lg"></i>
+        <i class="fa fa-lock pinDiv gray-light"></i>
+		<i class="fa fa-window-close gray-light fa-lg"></i>
 		<i class="fa fa-refresh right" title="Reload Latest" id="reloadSearchResults"></i>
 			<div id="searchResultsDiv mt-negative-1rem"></div>
 		</div>
