display:none instead of hidden

--- a/xgds_video/templates/xgds_video/map_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/map_recorded_playbacks.html
@@ -148,11 +148,11 @@
 {% block searchDiv %}
 <div id="search-gridstack-item" class="grid-stack-item" 
 		data-gs-x="4" data-gs-y="12"
-        data-gs-width="3" data-gs-height="2" hidden="true">
+        data-gs-width="3" data-gs-height="2" style="display:none;">
         <div class="grid-stack-item-content" id="search-gridstack-item-content" >
 	        <i class="fa fa-lock pinDiv gray-light"></i>
 	    	<i class="fa fa-window-close gray-light fa-lg"></i>
-			<div id="searchDiv mt-negative-1rem" hidden="true"></div>
+			<div id="searchDiv mt-negative-1rem" style="display:none;"></div>
 		</div>
 </div>
 {% endblock searchDiv %}
