--- a/xgds_video/templates/xgds_video/video_notes.html
+++ b/xgds_video/templates/xgds_video/video_notes.html
@@ -2,7 +2,7 @@
 {% if user.is_authenticated %}
 <button id="add_note_button" class="btn btn-primary toprow-right small float_button add_note_button">Add Note</button>
 <div id="notes_content" class="tab-content active notes_content notes_input_container">
-	<div class="notediv" id="notes_input" hidden>
+	<div class="notediv" id="notes_input" style="display:none;">
 		<form id="create_note{{ form.index }}" class="create_note_form" action="" method="POST">
 			<input type="hidden" id="id_event_time" >
 			<input type="hidden" id="id_event_timezone" >
