--- a/xgds_video/attic/templates/LiveImageStream.html
+++ b/xgds_video/attic/templates/LiveImageStream.html
@@ -1,21 +1,22 @@
 ﻿{% extends "base.html" %}
+{% load static %}
 
 {% block headExtras %}
 {{block.super}}
-	<script src="{{ STATIC_URL }}geocamUtil/js/zmq.js" type="text/javascript"></script>
+	<script src="{% static 'geocamUtil/js/zmq.js' %}" type="text/javascript"></script>
 	<script src="{{ EXTERNAL_URL }}jquery/dist/jquery.min.js" type="text/javascript"></script>
  	<script src="{{ EXTERNAL_URL }}masonry/dist/masonry.pkgd.min.js" type="text/javascript"></script>
  	<script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.min.js"></script>
  	<script src="{{ EXTERNAL_URL }}jquery.tagsinput/src/jquery.tagsinput.js" type="text/javascript" ></script>
  	<script src="{{ EXTERNAL_URL }}jquery-form/jquery.form.js" type="text/javascript" ></script>
-  	<script src="{{ STATIC_URL }}xgds_video/js/video_size_utils.js" type="text/javascript" ></script>
+  	<script src="{% static 'xgds_video/js/video_size_utils.js' %}" type="text/javascript" ></script>
   	<script type="text/javascript">
-    	var STATIC_URL = '{{STATIC_URL}}';
+    	var STATIC_URL = '{{STATIC_URL}}'; //TODO do we need this?
         var submitNoteUrl = "{% url 'record_simple' %}";
     </script>
- 	<script src="{{STATIC_URL}}xgds_video/js/liveImageStream.js" type="text/javascript"></script>
+ 	<script src="{% static 'xgds_video/js/liveImageStream.js' %}" type="text/javascript"></script>
  	{% if INCLUDE_NOTE_INPUT %}
- 	<script src="{{STATIC_URL}}xgds_video/js/video_notes_form.js" type="text/javascript" ></script>
+ 	<script src="{% static 'xgds_video/js/video_notes_form.js' %}" type="text/javascript" ></script>
  	{% endif %}
 {% endblock headExtras %}
 
@@ -23,7 +24,7 @@
  {{ block.super }}
 	<link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery.tagsinput/dist/jquery.tagsinput.min.css"></link>
 	<link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery-ui/themes/base/jquery-ui.min.css" ></link>
-	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}xgds_video/css/xgds_video.css"></link>
+	<link rel="stylesheet" type="text/css" href="{% static 'xgds_video/css/xgds_video.css' %}"></link>
 {% endblock cssExtras %}
 
 {% load nav %}
@@ -51,7 +52,7 @@
                 </div>
                 {% if INCLUDE_NOTE_INPUT %}
 				<section>
-	            {% include "xgds_video/video_notes.html" with data=source.form source=source STATIC_URL=STATIC_URL %}
+	            {% include "xgds_video/video_notes.html" with data=source.form source=source %}
 	            </section>
 	            {% endif %}
 	 			<img class='imageStream' style='display:block;' id="cameraImage{{ source.shortName }}" src="" alt="camera image {{source.shortName}}"></img>
