--- a/xgds_video/attic/templates/SearchImageStreams.html
+++ b/xgds_video/attic/templates/SearchImageStreams.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 {% block headExtras %}
 {{ block.super }}
     <script type="text/javascript" src="{{ EXTERNAL_URL }}jquery/dist/jquery.min.js"></script>
@@ -51,7 +52,7 @@
   {{ block.super }}
   	<script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.min.js"></script>
   	<script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}datatables/media/js/jquery.dataTables.min.js"></script>
-	<script language="javascript" type="text/javascript" src="{{ STATIC_URL }}geocamUtil/js/datatable_helpers.js"></script>
+	<script language="javascript" type="text/javascript" src="{% static 'geocamUtil/js/datatable_helpers.js' %}"></script>
 	
  	<script src="{{ EXTERNAL_URL }}jquery-form/jquery.form.js" type="text/javascript" ></script>
   	<script type="text/javascript">
