--- a/xgds_video/attic/templates/video_feeds.html
+++ b/xgds_video/attic/templates/video_feeds.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 {% block headExtras %}
 {{block.super}}
 <script src="{{ EXTERNAL_URL }}jquery/dist/jquery.min.js" type="text/javascript"></script>
@@ -9,9 +10,9 @@
  <script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.min.js"></script>
  <script src="{{ EXTERNAL_URL }}jquery-tagsinput/src/jquery.tagsinput.js" type="text/javascript" ></script>
  <script src="{{ EXTERNAL_URL }}jquery-form/jquery.form.js" type="text/javascript" ></script>
-  <script src="{{ STATIC_URL }}xgds_video/js/video_size_utils.js" type="text/javascript" ></script>
+  <script src="{% static 'xgds_video/js/video_size_utils.js' %}" type="text/javascript" ></script>
   <script type="text/javascript">
-    var STATIC_URL = '{{ STATIC_URL }}';
+    var STATIC_URL = '{{ STATIC_URL }}'; //TODO do we need this?
     var submitNoteUrl = "{% url 'record_simple' %}";
  	var maxWidth = getMaxWidth({{videoFeedData|length}});
  	var isLive = true;
@@ -22,7 +23,7 @@
  {{ block.super }}
 <link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery.tagsinput/dist/jquery.tagsinput.min.css"></link>
 <link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery-ui/themes/base/jquery-ui.min.css" ></link>
-<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}xgds_video/css/xgds_video.css"></link>
+<link rel="stylesheet" type="text/css" href="{% static 'xgds_video/css/xgds_video.css' %}"></link>
 {% endblock cssExtras %}
 
 {% block scripts %}
@@ -59,7 +60,7 @@ If plugin is missing, download <a href="https://support.google.com/chrome/answer
 	     </div>
 	     {% if INCLUDE_NOTE_INPUT %}
 	     <section>
-	     {% include "xgds_video/video_notes.html" with data=form source=feed.source.shortName STATIC_URL=STATIC_URL %}
+	     {% include "xgds_video/video_notes.html" with data=form source=feed.source.shortName %}
 	     </section>
 	     {% endif %}
 	     <script language="javascript" type="text/javascript">
