--- a/xgds_video/templates/xgds_video/VideoCSS.html
+++ b/xgds_video/templates/xgds_video/VideoCSS.html
@@ -1,1 +1,2 @@
-<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}xgds_video/css/xgds_video.css"></link>
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'xgds_video/css/xgds_video.css' %}"></link>
