--- a/xgds_video/templates/xgds_video/video_still_viewer.html
+++ b/xgds_video/templates/xgds_video/video_still_viewer.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load nav %}
+{% load static %}
 {% block siteSection %}Still {{flightName}} {{formattedTime}}{% endblock %}
     {% block nav %}
     {% nav "xgds_video_flights" %}
@@ -9,7 +10,7 @@
  {% block cssExtras %}
  {{ block.super }}
     <link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery-ui/themes/base/jquery-ui.min.css" ></link>
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}xgds_video/css/xgds_video.css"></link>
+    <link rel="stylesheet" type="text/css" href="{% static 'xgds_video/css/xgds_video.css' %}"></link>
  {% endblock cssExtras %}
 
 {% block scripts %}
@@ -19,14 +20,13 @@
     <script type="text/javascript">
     	var source = '{{source.shortName}}';
         var submitNoteUrl = "{% url 'record_simple' %}";
-        STATIC_URL='{{ STATIC_URL }}';
         var event_timestring = '{{event_timestring}}';
         var isLive = true;
     </script>
  	<script src="{{ EXTERNAL_URL }}jquery-form/jquery.form.js" type="text/javascript" ></script>
  	<script type="text/javascript" src="{{ EXTERNAL_URL }}date/index.js"></script>
  	{% if INCLUDE_NOTE_INPUT %}
- 	<script src="{{STATIC_URL}}xgds_video/js/video_notes_form.js" type="text/javascript" ></script>
+ 	<script src="{% static 'xgds_video/js/video_notes_form.js' %}" type="text/javascript" ></script>
  	{% endif %}
 {% endblock %}
 
@@ -56,7 +56,7 @@
 	</div>
 	
 	  <section id="{{source.shortName}}_noteInput">
-            {% include "xgds_video/video_notes.html" with data=form source=source.shortName STATIC_URL=STATIC_URL %}
+            {% include "xgds_video/video_notes.html" with data=form source=source.shortName %}
           </section>
         <br/>
 	<div>
