work in progress testing upgrade video for jwplayer 7 but we need license

--- a/xgds_video/templates/xgds_video/VideoJS.html
+++ b/xgds_video/templates/xgds_video/VideoJS.html
@@ -1,6 +1,6 @@
 {% load static %}
-    <script type="text/javascript" src="{{ EXTERNAL_URL }}packery/dist/packery.pkgd.min.js" ></script> -->
-    <script type="text/javascript" src="{{ EXTERNAL_URL }}klass/klass.min.js"></script>
+    <!-- <script type="text/javascript" src="{{ EXTERNAL_URL }}packery/dist/packery.pkgd.min.js" ></script> --> 
+    <!-- <script type="text/javascript" src="{{ EXTERNAL_URL }}klass/klass.min.js"></script>  -->
     <script type="text/javascript" src="{{ EXTERNAL_URL }}jwplayer/jwplayer.js"></script>
  	<!--  <script type="text/javascript" src="{{ EXTERNAL_URL }}jquery-form/jquery.form.js" ></script> -->
     <script type="text/javascript">
