--- a/xgds_video/templates/xgds_video/map_live_playbacks.html
+++ b/xgds_video/templates/xgds_video/map_live_playbacks.html
@@ -9,20 +9,7 @@
 {% endblock %}
 
 	
-	{% block preApplication %}
-	
- 	{% block errorMessages %}
-	{% if messages %}
-	<div id="errorMessagesDiv">
-	    <ul class="messages" id="errorMessage" style="color:red;">
-	    {% for message in messages %}
-	        <li>{% if message.tags %} {{ message.tags }}: {% endif %}  {{ message }}</li>
-	    {% endfor %}
-	    </ul>
-	</div>
-	{% endif %}
-	{% endblock errorMessages %}
-	
+	{% block topStuff %}
     	<div id="topStuff" >
 	    	<div id="infoTable" >
 	    	<table>
@@ -36,51 +23,46 @@
 	   		</div>
    		</div>
 
-		{% block ribbonSlider %}
+ {% endblock topStuff %}
+ 
+ {% block ribbonSlider %}
  		<fieldset id="videoFieldset">
 		 	  <div id="masterSlider" class="masterSlider" ><br/></div>
  		</fieldset>
- 		{% endblock ribbonSlider %}
- 		
- 		{% block videodivs2 %}
- 	
- 	
-
-        {% for source, noteform in zipped %}
+ {% endblock ribbonSlider %}
+ 
+ {% block videodivs %}
+ 
+ {% for source, noteform in zipped %}
         <div id="view-gridstack-item-{{source.name}}" class="grid-stack-item" 
 		data-gs-x="{{ forloop.counter0|multiply:3 }}" data-gs-y="0"
         data-gs-width="{% if zipped|length > 1 %}3{% else %}6{%endif %}" data-gs-height="2" >
         <div class="grid-stack-item-content" id="view-gridstack-item-content-{{source.name}}" style="background-color:{{ source.displayColor }};">
-        	<ul class="nav justify-content-end">
-				<i class="fa fa-refresh mr-1" title="Refresh Video Player" id="{{source.shortName}}_refreshVideoPlayer"></i>
-        		<i class="fa fa-lock pinDiv gray-light mr-1"></i>
-        		<i class="fa fa-window-close gray-light fa-lg"></i>
-			</ul>
-	            <div class="buttons mt-negative-1rem">
-	                 <div class="toprow-left"><b>{{ source.name }}</b>{% if zipped|length == 1 %}
-             		<span class="hint">TODO INSERT HELPFUL WORDS HERE.</span>
-             		{% endif %}</div>
-	                 <a class="btn btn-primary toprow-right small" href="{% url 'xgds_video_live_source' source.shortName %}" target="{% if zipped.count > 1 %}{{episode.shortName}}_{{source.shortName}}{% else %}_blank{% endif %}" style="width:130px">New Window</a>
+	        	<ul class="nav justify-content-end">
+					<i class="fa fa-refresh mr-1" title="Refresh Video Player" id="{{source.shortName}}_refreshVideoPlayer"></i>
+	        		<i class="fa fa-lock pinDiv mr-1"></i>
+	        		<i class="fa fa-window-close fa-lg"></i>
+				</ul>
+	            <div class="mt-negative-1rem" id="{{source.shortName}}_noteInput">
+	                <strong class="big">{{ source.name }}</strong>
+             		<a href="#" href="{% url 'xgds_video_live_source' source.shortName %}" target="{% if zipped.count > 1 %}{{episode.shortName}}_{{source.shortName}}{% else %}_blank{% endif %}" class="btn btn-primary"><i class="fa fa-window-restore fa-fw mr-1" aria-hidden="true"></i>New Window</a>
+             		<!-- <section id="{{source.shortName}}_noteInput"> -->
+             		{% include "xgds_video/video_notes.html" with data=noteform source=source.shortName color=source.displayColor %}
+             		<!-- </section> -->
+             		
 	            </div>
-				<section id="{{source.shortName}}_noteInput">
-             		{% include "xgds_video/video_notes.html" with data=noteform source=source.shortName %}
-             	</section>
              	<!--embed the video-->
              	<section>
-              		<div id="player_container" class="row"> <!-- float-left">  -->
-             			<div id="{{ source.shortName }}" class="eleven columns"></div>
+              		<div id="player_container" class="nav justify-content-center"> 
+             			<div id="{{ source.shortName }}" ></div>
              		</div> <!--  player-container -->
-             		<div id="{{ source.shortName }}Label" style="float:left;text-align:left;font-family:arial,verdana,helvetica"> </div>
+             		<div id="{{ source.shortName }}Label" > </div> <!-- style="float:left;text-align:left;" -->
              	</section>
             </div><!--  item -->
         </div>
         {% endfor %}
 
-	{% endblock videodivs2 %}
- 		
- {% endblock preApplication %}
- 
- 	
+	{% endblock videodivs %}
  
 {% block scripts %}
 	{{block.super}}
@@ -92,7 +74,7 @@
 
 {% block jsInitVideo %}
 	{% for source, noteForm in zipped %}
-		xgds_video.buildLiveJWPlayer('{{source.name}}', '{{source.videofeed_set.first.realtimeUrl}}');
+		xgds_video.buildLiveJWPlayer('{{source.name}}', '{{source.videofeed_set.first.realtimeUrl}}', '{{source.videofeed_set.first.settings.aspectRatio}}');
 		xgds_notes.setupNotesUI($("#{{source.name}}_noteInput"));
 	{% endfor %}
 {% endblock jsInitVideo %}
