--- a/xgds_video/templates/xgds_video/map_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/map_recorded_playbacks.html
@@ -97,7 +97,7 @@
  	
 {% endblock preDashboard %}
 
-{% block preMap %}
+{% block preSearchDiv %}
 
 {% block videodivs %}
 {% if segmentsJson %}
@@ -144,6 +144,7 @@
         {% endblock videoSources %}
 {% endif %}
 {% endblock videodivs %}
+{% endblock preSearchDiv %}
 
 {% block searchDiv %}
 <div id="search-gridstack-item" class="grid-stack-item" 
@@ -154,7 +155,7 @@
 	        	<i class="fa fa-lock pinDiv gray-light mr-1"></i>
 	    		<i class="fa fa-window-close gray-light fa-lg"></i>
 	    	</ul>
-			<div id="searchDiv mt-negative-1rem" style="display:none;"></div>
+			<div id="searchDiv" class="mt-negative-1rem" style="display:none;"></div>
 		</div>
 </div>
 {% endblock searchDiv %}
@@ -165,16 +166,38 @@
         data-gs-width="3" data-gs-height="3" >
         <div class="grid-stack-item-content" id="search-results-gridstack-item-content" >
 	        <ul class="nav justify-content-end ">
-	        	<i class="fa fa-refresh right" title="Reload Latest" id="reloadSearchResults"></i>
+	        	<i class="fa fa-refresh mr-1" title="Reload Latest" id="reloadSearchResults"></i>
 				<i class="fa fa-lock pinDiv gray-light mr-2"></i>
 				<i class="fa fa-window-close gray-light fa-lg"></i>
 			</ul>
-			<div id="searchResultsDiv mt-negative-1rem"></div>
+			<div id="searchResultsDiv" class="mt-negative-1rem"></div>
+			
 		</div>
 </div>
 {% endblock searchResultsDiv %}
 
-{% endblock preMap %}
+{% block viewDiv %}
+<div id="view-gridstack-item" class="grid-stack-item" 
+		data-gs-x="0" data-gs-y="12"
+        data-gs-width="3" data-gs-height="3" style="display:none;" >
+        <div class="grid-stack-item-content" id="view-gridstack-item-content" >
+        	<ul class="nav justify-content-end">
+				<i class="fa fa-lock pinDiv gray-light mr-1"></i>
+				<i class="fa fa-window-close gray-light fa-lg"></i>
+			</ul>
+			<div class="mt-negative-1rem">
+				<a href="#" id="view-new-window-target" target="_blank" class="btn btn-primary"><i class="fa fa-window-restore fa-fw mr-1" aria-hidden="true"></i>New Window</a>
+				<button class="info btn btn-primary prev-button" id="prev_button"><i class="fa fa-backward"></i></button>
+				<strong id="nameBlock"></strong>
+				<button class="info btn btn-primary next-button" id="next_button"><i class="fa fa-forward"></i></button>
+			</div>
+			<div id="viewDiv">
+			</div>
+			<div id="notesDiv">
+			</div>
+		</div>
+</div> 
+{% endblock viewDiv %}
 
 {% block otherJSInit %}
 {{ block.super }}
@@ -253,7 +276,7 @@ var indexFileUrl = null;
     if (xgds_video.options.hasMasterSlider){
     	xgds_video.setupSlider();
     }
-    xgds_video.setupJWplayer({"mute":true}, "100%");
+    xgds_video.setupJWplayer({"mute":true}, "95%");
     {% endif %}
     {% endblock hookControls %}
     
