update test page for KSC backpack video

--- a/xgds_video/templates/xgds_video/testHLS.html
+++ b/xgds_video/templates/xgds_video/testHLS.html
@@ -13,7 +13,8 @@
     	//hlshtml: true,
 //        file: "/streamtest/Camera1/prog_index.m3u8",
 //        file: "rtmp://dev.wowza.longtailvideo.com/vod/_definst_/sintel/640.mp4", 
-        file: "https://wowza.jwplayer.com/live/jelly.stream/playlist.m3u8?DVR",
+//        file: "https://wowza.jwplayer.com/live/jelly.stream/playlist.m3u8?DVR",
+        file: "rtmp://10.10.24.55:1935/live/mp4:bp1-720p.sdp",
         width:1040,
         height:450,
 //        aspectratio:"16:9", 
