work in progress ribbon layout for recorded video player

--- a/xgds_video/templates/xgds_video/map_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/map_recorded_playbacks.html
@@ -50,7 +50,8 @@
  			 {% if not isLive %}
  			  <div id="ribbon"></div>
  			  {% endif %}
-		 	  <div id="masterSlider" class="masterSlider" ><br/></div>
+		 	  <div id="masterSlider" class="masterSlider" >
+		 	  </div>
  		</fieldset>
  		{% endif %}
  		{% endblock ribbonSlider %}
