updated xgds_video to be smarter about the index file name

--- a/xgds_video/templates/xgds_video/map_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/map_recorded_playbacks.html
@@ -63,10 +63,10 @@
     		<div id="controllers" > 
     			<div class="controller_div">
 	          	<a class="btn btn-primary btn btn-primary-info" id="playbuttonLink" href="#" onclick="xgds_video.playButtonCallback()">
-	              <i id="playbutton" class="fa fa-play fa-lg"></i>
+	              <i id="playbutton" class="fa fa-play fa-lg" onclick="xgds_video.playButtonCallback()"></i>
 	              </a>
 	            <a class="btn btn-primary btn btn-primary-info" id="pausebuttonLink" href="#" onclick="xgds_video.pauseButtonCallback()">
-	              <i id="pausebutton" class="fa fa-pause fa-lg active"></i>
+	              <i id="pausebutton" class="fa fa-pause fa-lg active" onclick="xgds_video.pauseButtonCallback()"></i>
 	              </a>
 	             </div>
 	          </div>
